--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   </head>
 
   <body>
-    <div ng-app="movieApp" class="movie-app">
+    <div ng-app="movieApp" ng-controller="MasterController" class="movie-app">
       <header class="container">
-        <div header-directive></div>
+        <div header-directive class="row"></div>
       </header>
-      <main>
-        
+      <main class="container">
+        <div class="row"></div>
       </main>
       <footer>
 
