--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
       <main class="container">
         <ui-view></ui-view>
       </main>
-      <footer>
-
+      <footer class="container">
+        <div class="footer row">
+          <div class="col-xs-12">
+            Movies, Shows and People data provided by <a href="https://www.themoviedb.org/" target="_blank">The Movie Database (TMDB)</a>
+          </div>
+        </div>
       </footer>
     </div>
   </body>
