--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <footer class="container">
         <div class="footer row">
           <div class="col-xs-12">
-            Movies, Shows and People data provided by <a href="https://www.themoviedb.org/" target="_blank">The Movie Database (TMDB)</a>
+            Built by Mo. Powered by <a href="https://www.themoviedb.org/" target="_blank">The Movie Database (TMDB)</a>. 
           </div>
         </div>
       </footer>
